<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >
	
	    <Button
	        android:id="@+id/btn_enter_qqlist"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/main_qqlist" />
	    
	    <Button
	        android:id="@+id/btn_scroller"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/main_scroller" />
	    
	    <Button
	        android:id="@+id/btn_quick_index"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/main_quick_index" />
	    
	    <Button
	        android:id="@+id/btn_path_effect"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/main_path_effect" />
	    
	    <Button
	        android:id="@+id/btn_wx_shake"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/main_wx_shake" />
	    
	 </LinearLayout>

</ScrollView>
